@startuml

class main
package "controller" {
    class AccountController
    class MainController
    class NetworkController
    class gstreamer_controller
    class gstreamer_pipeline
}
package "view" {
    class MainWindow
    class MainView
    class AccountView
}

package "services"
{
    class NetworkManager
    package "NetworkService" {
        interface INetworkService
        class TCPService
        class UDPService
        class UDPGStreamerService
    }
    class StorageManager
    package "StorageService" {
        interface IStorageService
        class MySqlService
        class SqlLiteService
    }
}

package "model"
{
    class CallRoom
    class CallBroker
    class ConferenceRoom
    class ConferenceCallBroker
    class DirectoryService
    class Login
    class Logout
    class User
}

INetworkService <|.. TCPService
INetworkService <|.. UDPService
NetworkManager --> INetworkService

IStorageService <|.. MySqlService
IStorageService <|.. SqlLiteService
StorageManager --> IStorageService
Login ..> StorageManager
Logout ..> StorageManager

AccountController --> MainView
MainController --> AccountView
NetworkController --> NetworkManager
NetworkController ..> DirectoryService
NetworkController ..> CallBroker
NetworkController ..> ConferenceCallBroker
NetworkController ..> StorageManager

MainWindow *-- MainView
MainWindow *-- AccountView

main --> MainWindow
main --> NetworkManager

Login --> User
Login ..> DirectoryService
Logout --> User
Logout ..> DirectoryService
DirectoryService --> User
ConferenceCallBroker --> ConferenceRoom
CallBroker --> CallRoom
CallRoom --> User
ConferenceRoom --> User

gstreamer_controller ..> NetworkManager
gstreamer_controller *- gstreamer_pipeline

@enduml
